# rapidly

./: .editorconfig  .gitignore  .terraformignore  AGENTS.md  Brewfile  CODE_OF_CONDUCT.md  COLLAB_EXCALIDRAW_GAP.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  M0_EXECUTION.md  M1_EXECUTION.md  M2_EXECUTION.md  M3_EXECUTION.md  M4_EXECUTION.md  M5_EXECUTION.md  M6_EXECUTION.md  M7_EXECUTION.md  M8_EXECUTION.md  NOTICE  PLATFORM_PLAN.md  RAPIDLY_ENGINEERING_SUITE_PLAN.md  README.md  SECURITY.md  conductor.json  docker-compose.coturn.yml  flake.nix  package.json  pyrightconfig.json  verify.sh
server/: .dockerignore  .env.template  .env.testing  Dockerfile  alembic.ini  docker-compose.yml  init-readonly-user.sql  pyproject.toml
server/.minio/: configure.sh  github.sh  local.sh
server/emails/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.js
server/emails/src/: index.tsx  preview.ts
server/load_tests/: README.md  __init__.py  config.py  locustfile.py
server/load_tests/common/: auth.py  distribution.py  test_data.py
server/load_tests/scenarios/: checkout.py  event_ingestion.py
server/migrations/: README.md  env.py  script.py.mako
server/migrations/versions/: 2026-03-31-0100_initial_rapidly_schema.py  2026-04-03-1950_add_missing_ondelete_constraints_and_.py  2026-05-10-2123_add_projects_domain_tables.py  2026-05-10-2145_add_rate_limit_group_to_projects.py  2026-05-10-2233_add_work_item_tables.py  2026-05-10-2245_add_work_item_comment_and_relation_.py  2026-05-12-1939_add_project_cycle_tables.py  2026-05-12-2008_add_project_module_tables.py  2026-05-12-2037_add_work_item_activities.py  2026-05-12-2140_add_project_pages.py  2026-05-17-1714_member_email_case_insensitive_index.py  2026-05-17-1805_drift_cleanup_revoke_default_privileges_.py  2026-05-19-0109_add_project_views_table.py  2026-05-19-2203_add_work_item_links_table.py  2026-05-19-2236_add_project_views_table.py  2026-05-19-2259_add_project_page_versions_table.py  2026-05-19-2350_add_work_item_attachments_table.py  2026-05-20-0011_add_work_item_subscribers_table.py  2026-05-20-0028_add_work_item_reactions_and_work_item_.py  2026-05-20-0040_add_work_item_types_table_and_work_.py  2026-05-20-1943_add_project_member_invites_table.py  2026-05-20-2016_add_project_module_members_and_project_.py  2026-05-20-2025_add_project_user_properties_table.py  2026-05-20-2036_add_work_item_mentions_table.py  2026-05-20-2046_add_project_cycle_user_properties_and_.py  2026-05-20-2104_add_stickies_table.py  2026-05-20-2123_add_recent_visits_table.py  2026-05-20-2133_add_work_item_votes_table.py  2026-05-20-2146_add_intake_work_items_table.py  2026-05-20-2242_add_analytic_views_table.py  2026-05-21-1947_add_project_deploy_boards_table.py  2026-05-24-2222_drop_projects_extension_tables_cycle_.py  2026-05-25-2159_add_federated_models_and_model_.py  2026-05-25-2322_add_workflows_table.py  2026-05-25-2329_add_workflow_versions_table_and_fk_on_.py  2026-05-25-2337_add_agent_runs_table.py  2026-05-26-2034_add_agent_node_runs_table.py  2026-05-26-2105_agents_rag_vector_collections_vector_.py  2026-05-26-2240_agents_integration_credentials.py  2026-05-26-2330_agents_llm_usage.py  (+13 more)
server/monitoring/: prometheus.yml
server/rapidly/: api.py  app.py  config.py  enums.py  exception_handlers.py  logfire.py  logging.py  openapi.py  postgres.py  posthog.py  rate_limit.py  redis.py  routing.py  sentry.py  types.py  workers.py
server/rapidly/admin/: .npmrc  DEVELOPMENT_GUIDE.md  README.md  __init__.py  dependencies.py  formatters.py  forms.py  generate-icons.mjs  layout.py  middlewares.py  navigation.py  package.json  pnpm-lock.yaml  responses.py  scripts.mjs  static_urls.py  styles.css  toast.py  versioned_static.py
server/rapidly/analytics/: __init__.py
server/rapidly/billing/: __init__.py
server/rapidly/catalog/: __init__.py
server/rapidly/core/: address.py  anonymization.py  cors.py  crypto.py  csv.py  currency.py  email.py  geolocation.py  http.py  jwk.py  jwt.py  math.py  metadata.py  oauth.py  ordering.py  pagination.py  rate_limit.py  routing.py  time_queries.py  types.py  utils.py
server/rapidly/customers/: __init__.py
server/rapidly/errors/: __init__.py
server/rapidly/health/: api.py
server/rapidly/identity/: __init__.py
server/rapidly/messaging/: __init__.py
server/rapidly/middlewares/: __init__.py  envelope.py  routing.py  sandbox.py  workers.py
server/rapidly/models/: __init__.py  account.py  agent_node_run.py  agent_run.py  analytic_view.py  custom_field.py  customer.py  customer_session.py  customer_session_code.py  dataset.py  dataset_case.py  email_verification.py  eval_run.py  eval_run_case.py  event.py  event_type.py  external_event.py  federated_model.py  file.py  file_share_download.py  file_share_payment.py  file_share_report.py  file_share_session.py  intake_work_item.py  integration_credential.py  llm_usage.py  login_code.py  member.py  member_session.py  model_discipline.py  notification.py  notification_recipient.py  oauth2_authorization_code.py  oauth2_client.py  oauth2_grant.py  oauth2_token.py  payment.py  payment_method.py  project.py  project_cycle.py  (+55 more)
server/rapidly/observability/: __init__.py  file_sharing_metrics.py  http_metrics.py  http_middleware.py  metrics.py  otel_prometheus.py  remote_write.py  security_metrics.py  slo.py
server/rapidly/platform/: __init__.py
server/rapidly/projects/: __init__.py  common.py
server/rapidly/sharing/: __init__.py
server/rapidly/worker/: __init__.py  _broker.py  _debounce.py  _encoder.py  _enqueue.py  _health.py  _httpx.py  _metrics.py  _queue_metrics.py  _queues.py  _redis.py  (+3 more)
server/scripts/: db.py  generate_openapi.py  helper.py  ingest_test_events.py  loadtest_setup.py  seeds_load.py  shell.py  tinybird.py
server/tests/: conftest.py  test_app_helpers.py  test_chamber_flags.py  test_config.py  test_enums.py  test_errors.py  test_exception_handlers.py  test_logfire.py  test_logging.py  test_openapi.py  test_openapi_unit.py  test_postgres.py  test_posthog.py  test_rate_limit.py  test_redis_client.py  test_sentry.py
(+2464 files in other folders)
